--- a/src/app/shared.css
+++ b/src/app/shared.css
@@ -226,8 +226,9 @@
   max-width: 80rem;
   width: 100%;
   max-height: 90vh;
-  overflow: auto;
+  overflow: hidden auto;
   background: #FFFFFF;
+  border-radius: 20px;
   transition: max-width 300ms ease;
 }
 
